seaqt/QtWidgets/gen_qdatetimeedit.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct VirtualQDateTimeEdit VirtualQDateTimeEdit;
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
QMetaObject* QDateTimeEdit_virtualbase_metaObject(const VirtualQDateTimeEdit* self);
void* QDateTimeEdit_virtualbase_metacast(VirtualQDateTimeEdit* self, const char* param1);
int QDateTimeEdit_virtualbase_metacall(VirtualQDateTimeEdit* self, int param1, int param2, void** param3);
QSize* QDateTimeEdit_virtualbase_sizeHint(const VirtualQDateTimeEdit* self);
void QDateTimeEdit_virtualbase_clear(VirtualQDateTimeEdit* self);
void QDateTimeEdit_virtualbase_stepBy(VirtualQDateTimeEdit* self, int steps);
bool QDateTimeEdit_virtualbase_event(VirtualQDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_virtualbase_keyPressEvent(VirtualQDateTimeEdit* self, QKeyEvent* event);
void QDateTimeEdit_virtualbase_wheelEvent(VirtualQDateTimeEdit* self, QWheelEvent* event);
void QDateTimeEdit_virtualbase_focusInEvent(VirtualQDateTimeEdit* self, QFocusEvent* event);
bool QDateTimeEdit_virtualbase_focusNextPrevChild(VirtualQDateTimeEdit* self, bool next);
int QDateTimeEdit_virtualbase_validate(const VirtualQDateTimeEdit* self, struct miqt_string input, int* pos);
void QDateTimeEdit_virtualbase_fixup(const VirtualQDateTimeEdit* self, struct miqt_string input);
QDateTime* QDateTimeEdit_virtualbase_dateTimeFromText(const VirtualQDateTimeEdit* self, struct miqt_string text);
struct miqt_string QDateTimeEdit_virtualbase_textFromDateTime(const VirtualQDateTimeEdit* self, QDateTime* dt);
int QDateTimeEdit_virtualbase_stepEnabled(const VirtualQDateTimeEdit* self);
void QDateTimeEdit_virtualbase_mousePressEvent(VirtualQDateTimeEdit* self, QMouseEvent* event);
void QDateTimeEdit_virtualbase_paintEvent(VirtualQDateTimeEdit* self, QPaintEvent* event);
void QDateTimeEdit_virtualbase_initStyleOption(const VirtualQDateTimeEdit* self, QStyleOptionSpinBox* option);
QSize* QDateTimeEdit_virtualbase_minimumSizeHint(const VirtualQDateTimeEdit* self);
QVariant* QDateTimeEdit_virtualbase_inputMethodQuery(const VirtualQDateTimeEdit* self, int param1);
void QDateTimeEdit_virtualbase_resizeEvent(VirtualQDateTimeEdit* self, QResizeEvent* event);
void QDateTimeEdit_virtualbase_keyReleaseEvent(VirtualQDateTimeEdit* self, QKeyEvent* event);
void QDateTimeEdit_virtualbase_focusOutEvent(VirtualQDateTimeEdit* self, QFocusEvent* event);
void QDateTimeEdit_virtualbase_contextMenuEvent(VirtualQDateTimeEdit* self, QContextMenuEvent* event);
void QDateTimeEdit_virtualbase_changeEvent(VirtualQDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_virtualbase_closeEvent(VirtualQDateTimeEdit* self, QCloseEvent* event);
void QDateTimeEdit_virtualbase_hideEvent(VirtualQDateTimeEdit* self, QHideEvent* event);
void QDateTimeEdit_virtualbase_mouseReleaseEvent(VirtualQDateTimeEdit* self, QMouseEvent* event);
void QDateTimeEdit_virtualbase_mouseMoveEvent(VirtualQDateTimeEdit* self, QMouseEvent* event);
void QDateTimeEdit_virtualbase_timerEvent(VirtualQDateTimeEdit* self, QTimerEvent* event);
void QDateTimeEdit_virtualbase_showEvent(VirtualQDateTimeEdit* self, QShowEvent* event);
int QDateTimeEdit_virtualbase_devType(const VirtualQDateTimeEdit* self);
void QDateTimeEdit_virtualbase_setVisible(VirtualQDateTimeEdit* self, bool visible);
int QDateTimeEdit_virtualbase_heightForWidth(const VirtualQDateTimeEdit* self, int param1);
bool QDateTimeEdit_virtualbase_hasHeightForWidth(const VirtualQDateTimeEdit* self);
QPaintEngine* QDateTimeEdit_virtualbase_paintEngine(const VirtualQDateTimeEdit* self);
void QDateTimeEdit_virtualbase_mouseDoubleClickEvent(VirtualQDateTimeEdit* self, QMouseEvent* event);
void QDateTimeEdit_virtualbase_enterEvent(VirtualQDateTimeEdit* self, QEnterEvent* event);
void QDateTimeEdit_virtualbase_leaveEvent(VirtualQDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_virtualbase_moveEvent(VirtualQDateTimeEdit* self, QMoveEvent* event);
void QDateTimeEdit_virtualbase_tabletEvent(VirtualQDateTimeEdit* self, QTabletEvent* event);
void QDateTimeEdit_virtualbase_actionEvent(VirtualQDateTimeEdit* self, QActionEvent* event);
void QDateTimeEdit_virtualbase_dragEnterEvent(VirtualQDateTimeEdit* self, QDragEnterEvent* event);
void QDateTimeEdit_virtualbase_dragMoveEvent(VirtualQDateTimeEdit* self, QDragMoveEvent* event);
void QDateTimeEdit_virtualbase_dragLeaveEvent(VirtualQDateTimeEdit* self, QDragLeaveEvent* event);
void QDateTimeEdit_virtualbase_dropEvent(VirtualQDateTimeEdit* self, QDropEvent* event);
bool QDateTimeEdit_virtualbase_nativeEvent(VirtualQDateTimeEdit* self, struct miqt_string eventType, void* message, intptr_t* result);
int QDateTimeEdit_virtualbase_metric(const VirtualQDateTimeEdit* self, int param1);
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));